codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__footer_collapse_empty_mode_cycle_without_context.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 5313
expression: terminal.backend()
---
"▌                                           "
"▌ Ask Codex to do anything                  "
"▌                                           "
"▌                                           "
"▌                                           "
"▌                                           "
"▌                                           "
"▌                                           "
"  ? for shortcuts        100% context left  "
