codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__footer_collapse_plan_queue_full.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 5313
expression: terminal.backend()
---
"▌                                                                                                                       "
"▌ Test                                                                                                                  "
"▌                                                                                                                       "
"▌                                                                                                                       "
"▌                                                                                                                       "
"▌                                                                                                                       "
"▌                                                                                                                       "
"▌                                                                                                                       "
"  tab to queue message · Plan mode                                                                    98% context left  "
